# SAFARI-SALAMA

./: .env  .gitignore  AndroidManifest_backup.xml  DOCUMENTATION_INDEX.md  ERROR_AND_INCOMPLETENESS_SUMMARY.md  IMPLEMENTATION_REPORT_DEC23.md  QUICK_REFERENCE_GUIDE.md  README.md  SESSION_SUMMARY.md  WORK_COMPLETE.md  WORK_IN_PROGRESS.md  database_schema-safari_salama_pg_admin_4.sql  env_backup.txt  netlify-build.sh  netlify.toml  render.yaml  run_driver.bat  steps.txt
app/: main.py
app/api/: routes.py
app/core/: config.py  security.py
app/models/: emergency_alert.py
app/schemas/: route.py  trip.py
backend/: create_tables.py  pyproject.toml  safari_salama.db  simulate_movement.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  payments.py  ratings.py  routes.py  trips.py  users.py  vehicles.py  websockets.py
backend/app/models/: __init__.py  gps_point.py  payment.py  rating.py  route.py  sacco.py  trip.py  user.py
backend/app/schemas/: __init__.py  emergency_alert.py  gps_point.py  payment.py  rating.py  route.py  sacco.py  trip.py  vehicle.py
backend/app/services/: notification_service.py
backend/app/websockets/: __init__.py  manager.py
driver/: .env  pubspec.yaml
driver/lib/: main.dart
driver_app/: build.gradle  settings.gradle
driver_app/app/: build.gradle
linux/: CMakeLists.txt
mobile/: .env  .gitignore  pubspec.yaml
safari_salama/: .env  README.md  pubspec.yaml
safari_salama_backend/: .env  .gitignore  netlify-build.sh  netlify.toml  requirements.txt
web/: manifest.json
windows/: CMakeLists.txt
(+88 files in other folders)
